minor update of issue template.

--- a/.github/ISSUE_TEMPLATE/report-issue.yaml
+++ b/.github/ISSUE_TEMPLATE/report-issue.yaml
@@ -21,7 +21,7 @@ body:
       required: true
   - type: input
     attributes:
-      label: Device Name
+      label: Device Name (like Pixel8)
     validations:
       required: true
   - type: dropdown
