Add Android8 into device version list.

--- a/.github/ISSUE_TEMPLATE/report-issue.yaml
+++ b/.github/ISSUE_TEMPLATE/report-issue.yaml
@@ -24,6 +24,7 @@ body:
       label: Device OS
       options:
         - Unknown
+        - Android  8
         - Android  9
         - Android 10
         - Android 11
